# logging_app

./: .gitignore  README.md
app_logger/: CMakeLists.txt  README.md
app_logger/src/: logger_app.cpp  logger_app.hpp  main.cpp
app_logger/tests/: CMakeLists.txt  tests.cpp
app_statistic/: CMakeLists.txt  README.md
app_statistic/src/: main.cpp  statistic_app.cpp  statistic_app.hpp
app_statistic/tests/: CMakeLists.txt  tests.cpp
lib_logger/: CMakeLists.txt  README.md
lib_logger/docs/html/: annotated.html  classLogger_1_1File__logging-members.html  classLogger_1_1File__logging.html  classLogger_1_1File__logging__coll__graph.map  classLogger_1_1File__logging__coll__graph.md5  classLogger_1_1Logger__protocol_1_1Protocol-members.html  classLogger_1_1Logger__protocol_1_1Protocol.html  classLogger_1_1Logging-members.html  classLogger_1_1Logging.html  classLogger_1_1Session-members.html  classLogger_1_1Session.html  classLogger_1_1Session__inherit__graph.map  classLogger_1_1Session__inherit__graph.md5  classLogger_1_1Socket__logging-members.html  classLogger_1_1Socket__logging.html  classLogger_1_1Socket__logging__coll__graph.md5  classLogger_1_1Socket__logging__inherit__graph.map  classes.html  dir_000001_000000.html  dir_000002_000001.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  (+9 more)
lib_logger/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
lib_logger/src/: file_logger.cpp  logger.cpp  socket_logger.cpp
lib_logger/src/include/: logger.hpp
lib_logger/tests/: CMakeLists.txt  tests.cpp
